feat(pe): add progress-bar to rebuilder

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
 28/11/23: Split all this .hpp mess to .cpp(s) in order to reduce the compilation time
 28/11/23: Split the bb_decomp logic
 30/11/23: Replace all the manual sucessors/predecessors stuff, we should push them automatically or with a single method
+19/12/23: Add progress-bar to function linking (prob need to ask ZehMatt how to get some sort of serializer callbacks)
